<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_name" />

        <AutoCompleteTextView android:id="@+id/alarm_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_notes"/>

        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alarm_notes"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_locations"/>

        <EditText android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alarm_locations"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/alarm_start_time"/>

	        <EditText android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:id="@+id/alarm_start_time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/alarm_end_time"/>

	        <EditText android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:id="@+id/alarm_end_time"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_start_date"/>

            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_start_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_end_date"/>

            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_end_date"/>

        </LinearLayout>

    </LinearLayout>

    <Button android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_done" />


</LinearLayout>
